# a

./: .gitignore  ACCOUNTS.md  PEERS.md  README.md
AdventOfCode/2015/: day001-part1.20241204-1.rs  day001-part2.20241204-1.rs  day002-part1.20241205-1.rs  day002-part2.20241205-1.rs
AdventOfCode/2016/: day001-part1.20241204-1.rs  day001-part2.20241204-1.rs
AdventOfCode/2017/: day001-part1.20241204-1.rs  day001-part2.20241204-1.rs
AdventOfCode/2018/: day001-part1.20241204-1.rs  day001-part2.20241204-1.rs
AdventOfCode/2019/: day001-part1.20241204-1.rs  day001-part2.20241204-1.rs
AdventOfCode/2020/: day001-part1.20241205-1.rs  day001-part2.20241205-1.rs
AdventOfCode/2021/: day001-part1.20241205-1.rs  day001-part2.20241205-1.rs
AdventOfCode/2022/: day001-part1.20240722-1.rs  day001-part2.20240722-1.rs  day002-part1.20240826-1.rs  day002-part2.20240826-1.rs  day003-part1.20240826-1.rs  day003-part2.20240826-1.rs  day004-part1.20240828-1.rs  day004-part2.20240828-1.rs  day005-part1.20240828-1.rs  day005-part2.20240828-1.rs  day006-part1.20240828-1.rs  day006-part2.20240828-1.rs  day007-part1.20241208-1.rs  day007-part2.20241208-1.rs  day008-part1.20241208-1.rs  day008-part2.20241208-1.rs  day009-part1.20241210.rs
AdventOfCode/2023/: day001-part1.20240607-1.rs  day001-part2.20240607-1.rs  day002-part1.20240610-1.rs  day002-part2.20240610-1.rs  day003-part1.20240619-1.rs  day003-part2.20240619-1.rs  day004-part1.20240619-1.rs  (+21 more)
_w/w-cpp/: CMakeLists.txt
_w/w-cpp/3rd-party-libs/googletest/: CMakeLists.txt
_w/w-cpp/src/: example.cpp  main.cpp
_w/w-ex/: mix.exs  (+1 more)
(+509 files in other folders)
